Add style for the plugin content

--- a/styles/style.less
+++ b/styles/style.less
@@ -4,5 +4,7 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.test {
+.content {
+  padding: @component-padding;
+  width: 100%;
 }
