Create draf navbar

--- a/styles/style.less
+++ b/styles/style.less
@@ -4,7 +4,21 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.content {
+.rq_content {
   padding: @component-padding;
   width: 100%;
+}
+
+.rq_header {
+  background-color: @panel-heading-background-color;
+  border-bottom: 1px solid @panel-heading-border-color;
+  overflow: auto;
+  font-size: 1.5em;
+}
+
+.rq_crumb {
+  background-color: @button-background-color;
+  padding: 0px 5px;
+  float: left;
+  border-right: 1px solid @button-border-color;
 }
