--- a/styles/style.less
+++ b/styles/style.less
@@ -13,12 +13,19 @@
   background-color: @panel-heading-background-color;
   border-bottom: 1px solid @panel-heading-border-color;
   overflow: auto;
-  font-size: 1.5em;
 }
 
 .rq_crumb {
+  border: 0;
   background-color: @button-background-color;
-  padding: 0px 5px;
+  padding: @component-padding;
   float: left;
-  border-right: 1px solid @button-border-color;
+  font-size: 1.5em;
+}
+
+.rq_page-title h1 {
+  margin: 0;
+  padding: @component-padding;
+  color: @text-color-highlight;
+  text-align: center;
 }
