--- a/styles/style.less
+++ b/styles/style.less
@@ -11,11 +11,11 @@
 
 .rq_header {
   background-color: @panel-heading-background-color;
-  border-bottom: 1px solid @panel-heading-border-color;
+  border: 1px solid @panel-heading-border-color;
   overflow: auto;
 }
 
-.rq_crumb {
+.rq_btn-nav {
   border: 0;
   background-color: @button-background-color;
   padding: @component-padding;
@@ -23,9 +23,18 @@
   font-size: 1.5em;
 }
 
+.rq_btn-nav:hover {
+  background-color: @button-background-color-hover;
+}
+
+.rq_back {
+  border-left: 5px solid @background-color-info;
+}
+
 .rq_page-title h1 {
   margin: 0;
   padding: @component-padding;
   color: @text-color-highlight;
+  background-color: @background-color-info;
   text-align: center;
 }
