--- a/styles/style.less
+++ b/styles/style.less
@@ -31,10 +31,13 @@
   border-left: 5px solid @background-color-info;
 }
 
-.rq_page-title h1 {
-  margin: 0;
-  padding: @component-padding;
-  color: @text-color-highlight;
+.rq_page-title {
   background-color: @background-color-info;
-  text-align: center;
+
+  #text {
+    color: @text-color-highlight;
+    margin: 0;
+    padding: @component-padding;
+    text-align: center;
+  }
 }
